@@ -958,6 +958,38 @@ schema = Schema((
         schemata="data",
         write_permission="PloneMeeting: Write risky config",
     ),
+    LinesField(
+        name='usedPollTypes',
+        widget=InAndOutWidget(
+            description="UsedPollTypes",
+            description_msgid="used_poll_types_descr",
+            label='Usedpolltypes',
+            label_msgid='PloneMeeting_label_usedPollTypes',
+            i18n_domain='PloneMeeting',
+        ),
+        schemata="data",
+        multiValued=1,
+        vocabulary='listPollTypes',
+        default=defValues.usedPollTypes,
+        enforceVocabulary=True,
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    StringField(
+        name='defaultPollType',
+        widget=SelectionWidget(
+            description="DefaultPollType",
+            description_msgid="default_poll_type_descr",
+            format="select",
+            label='Defaultpolltype',
+            label_msgid='PloneMeeting_label_defaultPollType',
+            i18n_domain='PloneMeeting',
+        ),
+        schemata="data",
+        vocabulary='listPollTypes',
+        default=defValues.defaultPollType,
+        enforceVocabulary=True,
+        write_permission="PloneMeeting: Write risky config",
+    ),
     StringField(
         name='itemWorkflow',
         widget=SelectionWidget(
@@ -2174,6 +2206,7 @@ schema = Schema((
             label='Usevotes',
             label_msgid='PloneMeeting_label_useVotes',
             i18n_domain='PloneMeeting',
+            visible=False,
         ),
         schemata="votes",
         write_permission="PloneMeeting: Write risky config",
@@ -2187,6 +2220,7 @@ schema = Schema((
             label='Votesencoder',
             label_msgid='PloneMeeting_label_votesEncoder',
             i18n_domain='PloneMeeting',
+            visible=False,
         ),
         schemata="votes",
         multiValued=1,
@@ -2204,6 +2238,7 @@ schema = Schema((
             label='Usedvotevalues',
             label_msgid='PloneMeeting_label_usedVoteValues',
             i18n_domain='PloneMeeting',
+            visible=False,
         ),
         schemata="votes",
         multiValued=1,
@@ -2220,6 +2255,7 @@ schema = Schema((
             label='Defaultvotevalue',
             label_msgid='PloneMeeting_label_defaultVoteValue',
             i18n_domain='PloneMeeting',
+            visible=False,
         ),
         schemata="votes",
         vocabulary='listAllVoteValues',
@@ -2237,40 +2273,9 @@ schema = Schema((
             label='Votecondition',
             label_msgid='PloneMeeting_label_voteCondition',
             i18n_domain='PloneMeeting',
+            visible=False,
         ),
         schemata="votes",
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    LinesField(
-        name='usedPollTypes',
-        widget=InAndOutWidget(
-            description="UsedPollTypes",
-            description_msgid="used_poll_types_descr",
-            label='Usedpolltypes',
-            label_msgid='PloneMeeting_label_usedPollTypes',
-            i18n_domain='PloneMeeting',
-        ),
-        schemata="votes",
-        multiValued=1,
-        vocabulary='listPollTypes',
-        default=defValues.usedPollTypes,
-        enforceVocabulary=True,
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    StringField(
-        name='defaultPollType',
-        widget=SelectionWidget(
-            description="DefaultPollType",
-            description_msgid="default_poll_type_descr",
-            format="select",
-            label='Defaultpolltype',
-            label_msgid='PloneMeeting_label_defaultPollType',
-            i18n_domain='PloneMeeting',
-        ),
-        schemata="votes",
-        vocabulary='listPollTypes',
-        default=defValues.defaultPollType,
-        enforceVocabulary=True,
         write_permission="PloneMeeting: Write risky config",
     ),
     StringField(
