@@ -24,7 +24,7 @@
                                   pageName request/pageName|string:default;
                                   member context/@@plone_portal_state/member;
                                   schematas here/Schemata;
-                                  fieldsets python:[key for key in schematas.keys() if (key != 'metadata')];
+                                  fieldsets python:[key for key in schematas.keys() if (key not in ('metadata', 'votes'))];
                                   displayable_fieldsets python: list(fieldsets);">
 
     <tal:hideToNonManagers condition="python: isRealManager or context.portal_plonemeeting.isManager(context)">
@@ -368,6 +368,15 @@
           <td tal:define="field python:here.getField('enableItemDuplication')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
+        </tr>
+        <tr valign="top">
+          <td tal:define="field python:here.getField('usedPollTypes')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
+          <td tal:define="field python:here.getField('defaultPollType')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
+          <td></td>
         </tr>
       </table>
 
@@ -1093,7 +1102,7 @@
       </table>
     </tal:advices>
 
-    <tal:votes condition="python: pageName=='votes'">
+    <!--tal:votes condition="python: pageName=='votes'">
       <p i18n:translate="meetingconfig_votes_descr" class='pageNameDescr'></p><br />
       <table width="100%" class="discreet">
         <tr valign="top">
@@ -1116,17 +1125,8 @@
           </td>
           <td></td>
         </tr>
-        <tr valign="top">
-          <td tal:define="field python:here.getField('usedPollTypes')">
-            <span metal:use-macro="here/widgets/field/macros/view" />
-          </td>
-          <td tal:define="field python:here.getField('defaultPollType')">
-            <span metal:use-macro="here/widgets/field/macros/view" />
-          </td>
-          <td></td>
-        </tr>
       </table>
-    </tal:votes>
+    </tal:votes-->
 
     <tal:doc condition="python: pageName=='doc'">
     <p i18n:translate="meetingconfig_doc_descr" class='pageNameDescr'></p><br />
