@@ -30,6 +30,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Added method get_contact_infos to the document generation helper view so for example when an advice creator is linked to a person,
   we may use a particular held_position to render signatory infos
 - Use _evaluateExpression from collective.behavior.talcondition everywhere to evaluate TAL expressions
+- Disabled the 'Votes' functionnality and relative tab on the MeetingConfig.  'Poll type' related MeetingConfigs fields
+  (usedPollTypes, defaultPollType) are moved at the bottom of the 'Data' tab
 
 4.1b16 (2019-01-31)
 -------------------
